# Pilcrow

./: .gitignore  CLAUDE.md  CONVENTION.md  Cargo.toml  Implementation Plan: System Fixes & Hardening.md  Pilcrow.code-workspace  README.md  SILCROW.md  SKILL.md  build.rs  claude.ai.md  codebase_audit.md.resolved  gemini-reviewed.txt  plan.md  prompt.md  readme.md  readme_v1.md  ws-checklist.md  ws-multiplex-implementation.md  ws-multiplex-refactor-plan.md
.github/workflows/: arch-check.yml
apps/: README.md
apps/backend/: Cargo.toml
apps/backend/src/: auth.rs  main.rs  service.rs
apps/backend/src/api/: grpc.rs  rest.rs
apps/web/: Cargo.toml  build.rs
apps/web/src/: main.rs
apps/web/src/api/: todos.rs
core/: Cargo.toml  build.rs  readme.md
core/docs/: partials-and-targets.md  silcrow.md
core/examples/: content_negotiation.rs  full_app.rs  hello.rs  navigation.rs  sse_live.rs  toasts_and_headers.rs  websocket.rs
core/silcrow/: live.js  navigator.js  patcher.js
core/src/: assets.rs  extract.rs  generated_routes.rs  lib.rs  macros.rs  response.rs
core/src/sse/: interval.rs  macros.rs  mod.rs  server_sent_events.rs
core/tests/: headers_and_modifiers.rs  macro_usage.rs  response_body.rs  ws_events.rs
crates/api-client-grpc/: Cargo.toml
crates/api-client-grpc/src/: health.rs  lib.rs
crates/api-client-rest/: Cargo.toml
crates/api-client-rest/src/: lib.rs
crates/contracts/src/: lib.rs
crates/contracts/src/errors/: errors.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/config/: config.rs
crates/core/src/envelope/: envelope.rs
crates/core/src/error/: error.rs
crates/macros/src/: lib.rs
crates/pilcrow/: Cargo.toml
crates/pilcrow-core/: Cargo.toml
crates/pilcrow-macros/: Cargo.toml
crates/pilcrow-web/: Cargo.toml
crates/pilcrow-web/src/: lib.rs
crates/pilcrow/docs/: forms-and-mutations.md  getting-started.md  guide.md  partials-and-targets.md  response-modifiers.md  sse-guide.md  templates.md  ws-guide.md
crates/pilcrow/examples/: content_negotiation.rs  hello.rs  sse_live.rs
crates/pilcrow/src/: assets.rs  extract.rs  generated_routes.rs  headers.rs  lib.rs  macros.rs  response.rs  ws.rs
crates/pilcrow/src/sse/: mod.rs
crates/pilcrow/tests/: headers_and_modifiers.rs  macro_usage.rs  sse_events.rs
crates/routekit/: Cargo.toml  README.md
crates/routekit/src/: codegen.rs  compiler.rs  discovery.rs  layout.rs  lib.rs  pipeline.rs
crates/routekit/src/route/: parser.rs  pattern.rs
crates/routekit/src/routing/: constraint.rs  discovery.rs  intercept.rs  mod.rs
crates/routekit/src/routing/path/: mod.rs
crates/routekit/src/routing/route/: detection.rs  mod.rs  parser.rs  pattern.rs
crates/routekit/src/templating/: codegen.rs  layout.rs  mod.rs  pipeline.rs
crates/runtime/: Cargo.toml  SKILL.md  build.rs  readme.md
crates/runtime/src/: assets.rs  generated_routes.rs  lib.rs  response.rs
crates/runtime/src/assets/: assets.rs
crates/runtime/src/extract/: extract.rs
crates/runtime/src/response/: mod.rs  response.rs
crates/runtime/src/sse/: ext.rs  macros.rs  server_sent_events.rs  watch.rs
crates/runtime/tests/: headers_and_modifiers.rs  macro_usage.rs  response_body.rs  sse_events.rs  ws_events.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: forms-and-mutations.md  getting-started.md  response-modifiers.md
examples/: full_app.rs  navigation.rs  sse_live.rs  toasts_and_headers.rs
pilcrow-macros/: Cargo.toml
pilcrow-macros/src/: lib.rs
public/: silcrow.js
routekit/: Cargo.toml  README.md
routekit/src/: codegen.rs  compiler.rs  discovery.rs  layout.rs  lib.rs  pipeline.rs
routekit/src/path/: hierarchy.rs
routekit/src/route/: detection.rs  mod.rs  parser.rs
sandbox/: Cargo.toml  Pilcrow.toml  README.md  build.rs
sandbox/apps/: README.md
sandbox/apps/backend/: Cargo.toml
sandbox/apps/backend/src/: main.rs  middleware.rs  models.rs  repository.rs  service.rs
sandbox/apps/backend/src/api/: contracts.rs  mod.rs  rest.rs
sandbox/apps/web/: Cargo.toml  build.rs
sandbox/apps/web/src/: backend_client.rs  main.rs
sandbox/apps/web/src/api/: todos.rs
sandbox/apps/web/src/components/: StatusBadge.html
sandbox/apps/web/src/layouts/: MainLayout.html
sandbox/apps/web/src/pages/: index.html
sandbox/astro_todo_demo/src/: main.rs
sandbox/astro_todo_demo/src/components/: TodoCard.html  TodoList.html
sandbox/astro_todo_demo/src/layouts/: AppLayout.html
sandbox/astro_todo_demo/src/pages/: index.html
sandbox/astro_todo_demo/src/pages/todos/: [id].html  completed.html
sandbox/crates/api-client-grpc/src/: client.rs  error.rs  lib.rs  traits.rs
sandbox/crates/api-client-rest/: Cargo.toml
sandbox/crates/api-client-rest/src/: client.rs  error.rs  traits.rs
sandbox/crates/contracts/: Cargo.toml
sandbox/crates/contracts/src/dtos/: dtos.rs
sandbox/crates/contracts/src/errors/: errors.rs
sandbox/src/: handlers.rs  main.rs  models.rs  templates.rs
sandbox/src/examples/: mod.rs
sandbox/src/examples/profile/: handlers.rs  mod.rs  models.rs  templates.rs
sandbox/src/examples/sse/task_manager/: handlers.rs  mod.rs  model.rs  templates.rs
sandbox/src/examples/standard/task_manager/: handlers.rs  mod.rs  model.rs  templates.rs
sandbox/src/examples/task_manager/: handlers.rs  mod.rs  models.rs  templates.rs
sandbox/src/examples/task_manager/sse/: handlers.rs  model.rs
sandbox/src/examples/task_manager/standard/: handlers.rs
sandbox/src/examples/ws/: mod.rs
sandbox/tools/cli/src/: check.rs  scaffold.rs
silcrow/: build.rs  index.js  live.js  navigator.js  patcher.js  safety.js  toasts.js  ws.js
src/: assets.rs  extract.rs  lib.rs  macros.rs  response.rs  select.rs  sse.rs  ws.rs
tests/: headers_and_modifiers.rs
tools/cli/src/: check.rs  main.rs  scaffold.rs
tools/pilcrow-cli/: Cargo.toml
