# ./Cargo.toml
[package]
name = "pilcrow"
version = "0.1.0"
edition = "2021"
description = "Premium response builders and content negotiation for Axum"
license = "MIT"
repository = "https://github.com/jeetkhinde/pilcrow"

[lib]
name = "pilcrow"
path = "src/lib.rs"
[dependencies]
axum = { version = "0.7", features = ["ws"] }
cookie = "0.18"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
tracing = "0.1"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
headers = "0.4"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
crc32fast = "1"
minifier = "0.3"
