# ./Cargo.toml
[package]
name = "pilcrow"
version = "0.1.0"
edition = "2021"
description = "Premium response builders and content negotiation for Axum"
license = "MIT"
repository = "https://github.com/jeetkhinde/pilcrow"

[lib]
name = "pilcrow"
path = "src/lib.rs"
[dependencies]
axum = { version = "0.7", features = ["ws"] }
cookie = "0.18"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
tracing = "0.1"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
headers = "0.4"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3"
tower = "0.5"
hyper = "1"

[build-dependencies]
crc32fast = "1"
minifier = "0.3"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "content_negotiation"
path = "examples/content_negotiation.rs"

[[example]]
name = "toasts_and_headers"
path = "examples/toasts_and_headers.rs"

[[example]]
name = "navigation"
path = "examples/navigation.rs"

[[example]]
name = "sse_live"
path = "examples/sse_live.rs"

[[example]]
name = "websocket"
path = "examples/websocket.rs"

[[example]]
name = "full_app"
path = "examples/full_app.rs"
