[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
maud = "0.26"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Link locally to the framework we just moved to /crates/pilcrow
pilcrow = { path = "../crates/pilcrow" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
async-stream = "0.3.6"
tokio-stream = { version = "0.1.18", features = ["sync"] }
pilcrow-routekit = { path = "../crates/routekit" }
askama = "0.12"

[build-dependencies]
pilcrow-routekit = { path = "../crates/routekit" }

[[bin]]
name = "astro_todo_demo"
path = "astro_todo_demo/src/main.rs"
