[package]
name = "pilcrow-api-client-rest"
version = "0.1.0"
edition = "2024"
description = "Typed REST client for Pilcrow web -> backend calls"
license = "MIT"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
pilcrow-contracts = { path = "../contracts" }
