[package]
name = "pilcrow-core"
version = "0.1.0"
edition = "2024"
description = "Core domain and protocol primitives for Pilcrow applications"
license = "MIT"

[lib]
name = "pilcrow_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
