# ./Cargo.toml
[package]
name = "pilcrow-runtime"
version = "0.1.0"
edition = "2024"
description = "Premium response builders and content negotiation for Axum"
license = "MIT"
repository = "https://github.com/jeetkhinde/pilcrow"

[lib]
name = "runtime"
path = "src/lib.rs"
[dependencies]
pilcrow-macros = { path = "../macros" }
axum = { version = "0.7", features = ["ws"] }
cookie = "0.18"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
crc32fast = "1"
tracing = "0.1"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
headers = "0.4"
tokio = { version = "1", features = ["sync", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3"
tower = "0.5"
hyper = "1"

[build-dependencies]
crc32fast = "1"
minifier = "0.3"
pilcrow-routekit = { path = "../routekit" }
